# FastAPI_first

./: README.md  pyproject.toml  run.py
backup/tmp/: config.py  run.py  wsgi.py
backup/tmp/tutorial/: __init__.py
backup/tmp/tutorial/static/js/: main.js
backup/tmp/tutorial/templates/: template.html  template2.html  template3.html  test.html  test2.html
backup/tmp/tutorial/views/: main.py
test/: __init__.py
test/static/: asset-manifest.json  index.html
test/static/static/css/: main.c1fb5cb8.css  main.c1fb5cb8.css.map
test/static/static/js/: main.785e2dcc.js  main.785e2dcc.js.map
